docs: WIP an improvement, but inconsistent

--- a/hips/hip-0027.md
+++ b/hips/hip-0027.md
@@ -11,7 +11,7 @@ status: "draft"
 
 This HIP proposes exposing metadata from the currently deployed chart version during template rendering for upgrade and rollback operations. Currently, Helm templates have access to `.Chart` which provides metadata about the chart being installed (name, version, appVersion, etc.), but no equivalent access to information about the release currently deployed in the cluster. This limitation prevents chart authors from implementing upgrade-aware logic, forcing them to rely on complex workarounds such as post-renderers, pre-upgrade hooks, or manual values file conventions.
 
-The proposal introduces a new `.DeployedChart` object available in the template context during `helm upgrade` and `helm rollback` operations. This object contains the same metadata structure as `.Chart` but is populated with values from the chart version currently running in the cluster. When no previous release exists (such as during initial installation), `.DeployedChart` is nil, allowing templates to safely check for its existence with `{{ if .DeployedChart }}`.
+The proposal introduces a new `.DeployedChart` object available in the template context during `helm upgrade` and `helm rollback` operations. This object contains the same metadata structure as `.Chart` but is populated with values from the chart version currently running in the cluster. When no deployed release exists (such as during initial installation), `.DeployedChart` is nil, allowing templates to safely check for its existence with `{{ if .DeployedChart }}`.
 
 This enhancement enables chart maintainers to build intelligent upgrade paths that can detect version transitions, implement breaking change migrations, conditionally apply resources based on version deltas, and provide seamless user experiences during chart lifecycle operations—all within the chart itself without requiring external tooling. An optional `--disable-deployed-chart` flag allows users to opt out of this feature for security or determinism requirements.
 
@@ -19,7 +19,7 @@ This enhancement enables chart maintainers to build intelligent upgrade paths th
 
 ### Current Limitations
 
-Helm's current template rendering model provides comprehensive information about the chart being installed through the `.Chart` object, but offers no native way to access metadata from the previously deployed release during template evaluation. This asymmetry creates significant challenges for chart authors who need to implement version-aware upgrade logic.
+Helm's current template rendering model provides comprehensive information about the chart being installed through the `.Chart` object, but offers no native way to access metadata from the currently deployed release during template evaluation. This asymmetry creates significant challenges for chart authors who need to implement version-aware upgrade logic.
 
 Today, chart developers who need to handle version-specific migrations or conditional upgrades must resort to workarounds that are complex, fragile, and outside Helm's intended design:
 
@@ -37,7 +37,7 @@ This approach is problematic because it moves upgrade logic outside the chart it
 
 ### Real-World Impact
 
-The lack of previous version metadata at template time prevents or significantly complicates several legitimate use cases:
+The lack of deployed chart metadata at template time prevents or significantly complicates several legitimate use cases:
 
 **Breaking Changes:** When a chart introduces breaking changes (e.g., renaming a Secret, changing a ConfigMap structure, or modifying PVC specifications), there's no clean way to handle the migration. Chart authors must either force users through manual steps or abandon backwards compatibility entirely.
 
@@ -51,9 +51,11 @@ The lack of previous version metadata at template time prevents or significantly
 
 Post-rendering solutions fundamentally break Helm's design philosophy. Template rendering should be deterministic and self-contained—the same chart with the same values should produce the same output. Post-renderers violate this principle by introducing external dependencies and cluster state into the rendering process at the wrong layer.
 
-Making previous chart metadata available during template rendering keeps upgrade logic where it belongs: in the chart itself. This maintains the portability, testability, and transparency that make Helm valuable while enabling sophisticated upgrade scenarios that are currently impossible or require significant infrastructure around Helm.
+Making deployed chart metadata available during template rendering keeps upgrade logic where it belongs: in the chart itself. This maintains the portability, testability, and transparency that make Helm valuable while enabling sophisticated upgrade scenarios that are currently impossible or require significant infrastructure around Helm.
 
 ## Rationale
+
+This section describes the design decisions made for this proposal and the reasoning behind them.
 
 ### Naming: `.DeployedChart`
 
@@ -72,7 +74,7 @@ The choice of `.DeployedChart` as the object name was made after considering sev
 
 ### Making `.DeployedChart` nil for Fresh Installs
 
-When no previous release exists (during `helm install`), `.DeployedChart` is set to `nil` rather than an empty struct or having default/zero values. This decision was made because:
+When no deployed release exists (during `helm install`), `.DeployedChart` is set to `nil` rather than an empty struct or having default/zero values. This decision was made because:
 
 - It follows idiomatic Go and template patterns for representing absence of data
 - It enables simple, natural existence checks: `{{ if .DeployedChart }}`
@@ -81,7 +83,13 @@ When no previous release exists (during `helm install`), `.DeployedChart` is set
 
 ### Same Metadata Structure as `.Chart`
 
-`.DeployedChart` exposes the same metadata fields as `.Chart` for consistency and simplicity. This includes fields like `Name`, `Version`, `AppVersion`, `Description`, `Keywords`, etc.
+`.DeployedChart` exposes the same metadata fields as `.Chart` for consistency and simplicity. This includes fields like `Name`, `Version`, `AppVersion`, `Description`, `Keywords`, `Home`, `Sources`, `Dependencies`, `Maintainers`, `Icon`, `APIVersion`, `Condition`, `Tags`, `Deprecated`, `Annotations`, `KubeVersion`, and `Type`.
+
+This decision provides:
+- **Consistency**: Chart authors already understand the `.Chart` structure
+- **Simplicity**: No need to learn a new metadata schema
+- **Sufficiency**: These fields cover the vast majority of version-aware logic use cases
+- **Future-proofing**: If new metadata fields are added to charts, they automatically become available in `.DeployedChart`
 
 ### Available During Upgrade and Rollback Operations
 
@@ -91,17 +99,14 @@ When no previous release exists (during `helm install`), `.DeployedChart` is set
 - Version-aware logic is valuable (e.g., handling migrations, conditional resources)
 - The semantics of "deployed chart" remain clear and unambiguous
 
-`.DeployedChart` is explicitly **not** available during:
-- `helm install`: No deployed chart exists; `.DeployedChart` would always be nil, providing no value
+`.DeployedChart` is explicitly **not** available (always nil) during:
+- `helm install`: No deployed chart exists
 - `helm template`: See "Dry-Run and Template Operations" below
 - `helm install --dry-run`: See "Dry-Run and Template Operations" below
 
 ### Chart Metadata Only (Not Full Release Data)
 
-This proposal intentionally limits `.DeployedChart` to chart metadata and does not expose the full release object, which would include:
-- Previous values (`.DeployedRelease.Values`)
-- Previous manifest (`.DeployedRelease.Manifest`)
-- Release metadata (revision number, timestamps, status, etc.)
+This proposal intentionally limits `.DeployedChart` to chart metadata and does not expose the full release object, which would include previous values, previous manifest, or detailed release metadata (revision number, timestamps, status, etc.).
 
 **Rejected in this proposal but could be added later:**
 
@@ -111,7 +116,7 @@ This proposal intentionally limits `.DeployedChart` to chart metadata and does n
 - Users can already query previous values via `lookup()` to ConfigMaps/Secrets if needed
 - If added in the future, strong warnings about secret handling would be required
 
-**Previous Manifest**: The full previous manifest would be:
+**Previous Manifest**: The full deployed manifest would be:
 - Potentially very large (performance impact on template rendering)
 - Complex to parse and reason about in templates
 - Not necessary for most version-aware logic scenarios
@@ -129,111 +134,453 @@ To provide flexibility for users who don't want this feature (for example, for s
 helm upgrade myrelease mychart --disable-deployed-chart
 ```
 
+When this flag is set, `.DeployedChart` will be nil even if a deployed release exists. This allows:
+- Organizations with strict security policies to disable the feature
+- Testing scenarios where deterministic output is required
+- Gradual adoption without forcing all users to change behavior
+
+The flag approach is preferred over environment variables or configuration files because:
+- It's explicit and visible in the command
+- It follows Helm's existing pattern of operation-specific flags
+- It can be easily scripted and automated
+
+### Handling Different Chart Names
+
+If a user changes the chart being used for a release (e.g., switching from `stable/postgresql` to `bitnami/postgresql`), `.DeployedChart` will still be populated with the metadata from the currently deployed release, even though `.Chart.Name` and `.DeployedChart.Name` will differ.
+
+This decision was made because:
+- Chart authors may intentionally want to detect chart name changes
+- Filtering by name would hide potentially important information
+- Templates can easily check `{{ if eq .Chart.Name .DeployedChart.Name }}` if they want to verify the chart name hasn't changed
+- It's more transparent—let chart authors decide how to handle mismatches
+
+### Deployed Chart Reflects Helm's Record
+
+`.DeployedChart` reflects the chart metadata from Helm's stored release record, not the actual state of resources in the cluster. If a user manually modified resources using `kubectl edit` or other tools, those changes are not reflected in `.DeployedChart`.
+
+This is consistent with Helm's existing behavior:
+- Helm tracks what Helm deployed, not arbitrary cluster state
+- The three-way merge during upgrades already uses Helm's release record as the baseline
+- Attempting to reflect actual cluster state would be complex, slow, and error-prone
+
+Chart authors who need to inspect actual cluster state should use the `lookup()` function, which is designed for that purpose.
+
+### Dry-Run and Template Operations
+
+`.DeployedChart` is **not** available during `helm template` or `helm install --dry-run` operations because these commands are intentionally cluster-agnostic and should remain deterministic without cluster context.
+
+However, we recognize that chart authors may want to test templates that use `.DeployedChart`. To support this use case:
+
+**Testing Recommendation**: Chart authors should structure their templates to handle nil `.DeployedChart` gracefully:
+
+```yaml
+{{- if .DeployedChart }}
+  {{- if semverCompare ">=2.0.0" .Chart.Version }}
+    {{- if semverCompare "<2.0.0" .DeployedChart.Version }}
+      # Migration logic for 1.x -> 2.x
+    {{- end }}
+  {{- end }}
+{{- end }}
+```
+
+**Future Extension**: A future enhancement could allow plugins or test frameworks to provide mock `.DeployedChart` data during `helm template` operations, similar to how values can be provided via `--values` or `--set`. This would enable:
+- Testing upgrade logic without a cluster
+- Documentation and examples that demonstrate `.DeployedChart` usage
+- CI/CD pipelines that validate upgrade paths
+
+This could be implemented as:
+- A `--mock-deployed-chart` flag that accepts a chart metadata file
+- A Helm SDK feature for test frameworks
+- A plugin interface for injecting template context
+
+However, this functionality is intentionally left out of this initial proposal to keep the scope focused. The core feature (making `.DeployedChart` available during real upgrades/rollbacks) can be implemented and proven valuable before adding testing conveniences.
+
 ## Specification
 
 The following outlines the syntax and semantics of the proposed changes.
 
 ### New Template Object: `.DeployedChart`
 
-- **Type**: Object
-- **Available in**: `helm upgrade`, `helm rollback`
-- **Populated from**: Metadata of the currently deployed chart version in the cluster
-- **Nil when**: No previous release exists (e.g., during fresh install)
+A new top-level template object `.DeployedChart` will be available during `helm upgrade` and `helm rollback` operations.
+
+**Availability:**
+- **Available**: `helm upgrade`, `helm rollback`
+- **Not available (nil)**: `helm install`, `helm template`, `helm install --dry-run`, or when `--disable-deployed-chart` flag is used
+
+**Populated from:** The metadata of the chart version currently deployed in the cluster, retrieved from Helm's release record.
 
 ### Metadata Fields
 
-`.DeployedChart` exposes the same fields as `.Chart`:
+`.DeployedChart` exposes the same structure and fields as `.Chart`:
 
-- `Name`: The name of the chart.
-- `Version`: The current version of the chart.
-- `AppVersion`: The version of the app enclosed in the chart.
-- `Description`: A brief description of the chart.
-- `Keywords`: Keywords associated with the chart.
-- `Home`: The home URL of the chart.
-- `Sources`: List of source URLs for the chart.
-- `Dependencies`: List of chart dependencies.
-- `Maintainers`: List of maintainers of the chart.
-- `Icon`: The icon URL of the chart.
-- `APIVersion`: The API version of the chart.
-- `Condition`: The condition for the chart.
-- `Tags`: Tags associated with the chart.
-- `Deprecated`: Deprecated status of the chart.
-- `Annotations`: Annotations for the chart.
-- `KubeVersion`: The Kubernetes version the chart is compatible with.
-- `Type`: The type of the chart.
+| Field | Type | Description |
+|-------|------|-------------|
+| `Name` | string | The name of the chart |
+| `Version` | string | The SemVer 2 version of the chart |
+| `AppVersion` | string | The version of the app enclosed in the chart |
+| `Description` | string | A brief description of the chart |
+| `Keywords` | []string | Keywords associated with the chart |
+| `Home` | string | The home URL of the chart |
+| `Sources` | []string | List of source URLs for the chart |
+| `Dependencies` | []Dependency | List of chart dependencies |
+| `Maintainers` | []Maintainer | List of maintainers |
+| `Icon` | string | The icon URL of the chart |
+| `APIVersion` | string | The API version of the chart (e.g., "v2") |
+| `Condition` | string | The condition for the chart |
+| `Tags` | string | Tags associated with the chart |
+| `Deprecated` | bool | Whether the chart is deprecated |
+| `Annotations` | map[string]string | Annotations for the chart |
+| `KubeVersion` | string | The Kubernetes version constraint |
+| `Type` | string | The type of the chart (application or library) |
 
 ### Usage in Templates
 
-Templates can access the deployed chart metadata using the `.DeployedChart` object. For example:
+Templates can access the deployed chart metadata using the `.DeployedChart` object. Templates should always check for nil before accessing fields:
 
+**Basic existence check:**
+```yaml
+{{- if .DeployedChart }}
+# A previous release exists
+currentVersion: {{ .Chart.Version }}
+previousVersion: {{ .DeployedChart.Version }}
+{{- else }}
+# Fresh installation
+currentVersion: {{ .Chart.Version }}
+previousVersion: "none"
+{{- end }}
+```
+
+**Version comparison for migrations:**
+```yaml
+{{- if .DeployedChart }}
+{{- if and (semverCompare ">=2.0.0" .Chart.Version) (semverCompare "<2.0.0" .DeployedChart.Version) }}
+---
+# Only created when upgrading from 1.x to 2.x
+apiVersion: batch/v1
+kind: Job
+metadata:
+  name: {{ include "mychart.fullname" . }}-migration
+spec:
+  template:
+    spec:
+      containers:
+      - name: migrate
+        image: myapp/migrator:{{ .Chart.AppVersion }}
+        command: ["migrate", "v1-to-v2"]
+{{- end }}
+{{- end }}
+```
+
+**Handling breaking changes:**
+```yaml
+apiVersion: v1
+kind: Secret
+metadata:
+  {{- if and .DeployedChart (semverCompare "<2.0.0" .DeployedChart.Version) }}
+  # Keep old name for backwards compatibility during upgrade
+  name: {{ include "mychart.fullname" . }}-legacy-secret
+  {{- else }}
+  # Use new name for fresh installs or post-2.0 upgrades
+  name: {{ include "mychart.fullname" . }}-credentials
+  {{- end }}
+type: Opaque
+data:
+  password: {{ .Values.password | b64enc }}
+```
+
+**Detecting chart name changes:**
+```yaml
+{{- if .DeployedChart }}
+{{- if ne .Chart.Name .DeployedChart.Name }}
+# WARNING: Chart name has changed from {{ .DeployedChart.Name }} to {{ .Chart.Name }}
+# This may indicate a migration between different chart repositories
+{{- end }}
+{{- end }}
+```
+
+### Command-Line Flag
+
+A new flag `--disable-deployed-chart` is added to `helm upgrade` and `helm rollback`:
+
+```bash
+# Normal upgrade with .DeployedChart available
+helm upgrade myrelease mychart
+
+# Upgrade with .DeployedChart disabled (will be nil)
+helm upgrade myrelease mychart --disable-deployed-chart
+```
+
+When this flag is set, `.DeployedChart` will be nil regardless of whether a deployed release exists.
+
+### Behavior During Different Operations
+
+| Operation | `.DeployedChart` Value |
+|-----------|----------------------|
+| `helm install` | Always `nil` (no deployed release) |
+| `helm upgrade` (first install) | `nil` (no deployed release) |
+| `helm upgrade` (actual upgrade) | Populated with deployed chart metadata |
+| `helm upgrade --disable-deployed-chart` | `nil` (explicitly disabled) |
+| `helm rollback` | Populated with currently deployed chart metadata |
+| `helm template` | Always `nil` (no cluster context) |
+| `helm install --dry-run` | Always `nil` (no cluster context) |
+
+## Backwards Compatibility
+
+This proposal is designed to be fully backwards compatible with existing charts and templates. The new `.DeployedChart` object is purely additive and does not remove or alter any existing functionality.
+
+**For existing charts:**
+- Charts that do not reference `.DeployedChart` will continue to function exactly as before
+- No changes to existing templates are required
+- No behavioral changes occur unless `.DeployedChart` is explicitly used
+
+**Safe nil handling:**
+- Go templates safely handle nil objects—accessing fields on nil returns zero values without errors
+- The recommended pattern `{{ if .DeployedChart }}` provides explicit nil checking
+- Templates written with proper nil checks will work correctly in all scenarios (fresh installs, upgrades, dry-runs)
+
+**No breaking changes:**
+- Existing template objects (`.Chart`, `.Release`, `.Values`, etc.) remain unchanged
+- Existing template functions continue to work identically
+- Helm CLI commands retain their current behavior
+- Release records and storage format are unaffected
+
+## Security Implications
+
+This proposal has been designed with security considerations in mind:
+
+**What is NOT exposed:**
+- Previous values are NOT exposed (values may contain secrets, passwords, API keys)
+- Previous manifest is NOT exposed (could contain sensitive rendered data)
+- Only chart metadata from Chart.yaml is exposed, which should not contain sensitive information
+
+**Best practices:**
+- Chart authors should not store sensitive data in Chart.yaml metadata
+- The `--disable-deployed-chart` flag allows organizations to opt out if needed
+- Chart metadata is already available in release records, so this doesn't expose new data—it only makes existing data accessible at template time
+
+**Potential concerns:**
+- If chart authors have improperly stored sensitive data in Chart.yaml annotations or descriptions, that data could now be used in templates. However, this would already be a security anti-pattern.
+- Templates that use `.DeployedChart` should be reviewed to ensure they don't inadvertently leak information into rendered manifests that would be stored in release records.
+
+**Recommendations:**
+- Documentation should emphasize that Chart.yaml should never contain secrets
+- Chart authors should use values and Kubernetes Secrets for sensitive data
+- Templates using `.DeployedChart` should be tested to ensure they handle all scenarios appropriately
+
+## How to Teach This
+
+### Documentation Updates
+
+The following documentation should be added or updated:
+
+**1. Template Objects Reference:**
+Add `.DeployedChart` to the list of built-in objects available in templates, with clear documentation about when it's available and when it's nil.
+
+**2. Upgrade Guide:**
+Create a guide titled "Implementing Version-Aware Upgrades" that covers:
+- How to check if `.DeployedChart` exists
+- Common patterns for version comparisons
+- Examples of handling breaking changes
+- Best practices for backwards compatibility
+
+**3. Migration Guide for Existing Workarounds:**
+Show chart authors how to replace existing workarounds:
+
+**Replacing Post-Renderers:**
+```yaml
+# Before: Required external post-renderer to inject migration job
+# After: Conditional resource creation in templates
+{{- if .DeployedChart }}
+{{- if and (semverCompare ">=2.0.0" .Chart.Version) (semverCompare "<2.0.0" .DeployedChart.Version) }}
+apiVersion: batch/v1
+kind: Job
+metadata:
+  name: migrate-v1-to-v2
+# ...
+{{- end }}
+{{- end }}
+```
+
+**Replacing Pre-Upgrade Hooks with ConfigMaps:**
+```yaml
+# Before: Used pre-upgrade hook to store version in ConfigMap
+# After: Direct access to deployed version
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: migration-config
+data:
+  previousVersion: {{ .DeployedChart.Version | default "none" | quote }}
+  requiresMigration: {{ if and .DeployedChart (semverCompare "<2.0.0" .DeployedChart.Version) }}"true"{{ else }}"false"{{ end }}
+```
+
+**Replacing Manual Values File Conventions:**
+```yaml
+# Before: Required users to set values.previousVersion manually
+# After: Automatic detection
+{{- if .DeployedChart }}
+{{- if ne .Values.behavior .DeployedChart.Annotations.defaultBehavior }}
+# User has changed behavior from previous default
+{{- end }}
+{{- end }}
+```
+
+**4. Common Use Case Examples:**
+
+**Example 1: Breaking Change Migration (Renamed Secret)**
+```yaml
+{{- if and .DeployedChart (semverCompare "<3.0.0" .DeployedChart.Version) }}
+# Keep old secret for backwards compatibility during upgrade
+apiVersion: v1
+kind: Secret
+metadata:
+  name: {{ include "mychart.fullname" . }}-old-credentials
+  annotations:
+    "helm.sh/resource-policy": keep
+type: Opaque
+data:
+  password: {{ .Values.password | b64enc }}
+---
+{{- end }}
+# New secret with updated name
+apiVersion: v1
+kind: Secret
+metadata:
+  name: {{ include "mychart.fullname" . }}-credentials
+type: Opaque
+data:
+  password: {{ .Values.password | b64enc }}
+```
+
+**Example 2: Conditional Data Migration Job**
+```yaml
+{{- if .DeployedChart }}
+{{- $major := semver .Chart.Version | int }}
+{{- $deployedMajor := semver .DeployedChart.Version | int }}
+{{- if gt $major $deployedMajor }}
+apiVersion: batch/v1
+kind: Job
+metadata:
+  name: {{ include "mychart.fullname" . }}-migrate-v{{ $deployedMajor }}-to-v{{ $major }}
+  annotations:
+    "helm.sh/hook": pre-upgrade
+    "helm.sh/hook-weight": "-5"
+    "helm.sh/hook-delete-policy": before-hook-creation
+spec:
+  template:
+    spec:
+      restartPolicy: OnFailure
+      containers:
+      - name: migrate
+        image: "{{ .Values.image.repository }}:{{ .Chart.AppVersion }}"
+        command: ["migrate", "v{{ $deployedMajor }}-to-v{{ $major }}"]
+{{- end }}
+{{- end }}
+```
+
+**Example 3: Smart Defaults Based on Installation vs Upgrade**
 ```yaml
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: my-config
+  name: {{ include "mychart.fullname" . }}-config
 data:
-	currentVersion: {{ .Chart.Version | quote }}
-		previousVersion: {{ dig "Version" "none" .DeployedChart | quote }}
+  {{- if .DeployedChart }}
+  # Preserve legacy behavior for existing installations
+  useNewFeature: {{ .Values.useNewFeature | default "false" | quote }}
+  {{- else }}
+  # Enable new feature by default for fresh installations
+  useNewFeature: {{ .Values.useNewFeature | default "true" | quote }}
+  {{- end }}
 ```
 
-### Dry-Run and Template Operations
+**5. Troubleshooting Section:**
+- What to do if `.DeployedChart` is unexpectedly nil
+- How to test templates that use `.DeployedChart`
+- Common pitfalls and how to avoid them
 
-`.DeployedChart` is not available during `helm template` or `helm install --dry-run`. These operations do not have an associated deployed release, so the concept of a "deployed chart" does not apply. Templates should not rely on `.DeployedChart` being present in these contexts.
+## Reference Implementation
 
-### Opt-Out Usage
+A reference implementation will be provided in a future pull request to the Helm repository. The implementation will:
 
-Users who wish to disable this feature can use the `--disable-deployed-chart` flag:
+1. Extend the template rendering context to include `.DeployedChart`
+2. Populate `.DeployedChart` from the release record during upgrade and rollback
+3. Add the `--disable-deployed-chart` flag to relevant commands
+4. Include unit tests for all scenarios (nil handling, version comparisons, etc.)
+5. Include integration tests for upgrade and rollback workflows
 
-```bash
-helm upgrade myrelease mychart --disable-deployed-chart
-```
+## Rejected Ideas
 
-When this flag is set:
+The following ideas were considered during the design of this HIP but were ultimately rejected:
 
-- The `.DeployedChart` object will not be populated
-- Templates should not use `.DeployedChart` to avoid errors
-- This allows users to maintain existing workflows or security postures
+### Exposing Full Release Object
 
-## Backwards compatibility
+**Idea:** Expose `.DeployedRelease` with values, manifest, and complete metadata instead of just `.DeployedChart`.
 
-This proposal is designed to be backwards compatible with existing charts and templates. The new `.DeployedChart` object is additive and does not remove or alter any existing functionality.
+**Rejection Reason:** 
+- Security concerns with exposing previous values (may contain secrets)
+- Performance concerns with exposing previous manifest (could be very large)
+- Complexity concerns (chart metadata is sufficient for most use cases)
+- Can be added later if compelling use cases emerge
 
-Charts that do not use the `.DeployedChart` object will continue to function as before. There are no breaking changes introduced by this proposal.
+### Making Available During `helm install`
 
-## Security implications
+**Idea:** Make `.DeployedChart` available during fresh installs (would always be nil).
 
-Care must be taken to ensure that sensitive data is not inadvertently exposed through the new `.DeployedChart` object. In particular, chart authors should be aware that:
+**Rejection Reason:**
+- Provides no value (would always be nil anyway)
+- Adds unnecessary complexity to install code path
+- Could cause confusion ("why is it nil during my install?")
+- Templates that check `{{ if .DeployedChart }}` work correctly without special handling
 
-- Chart metadata (from Chart.yaml) does not typically contain secrets, as it's a best practice to keep sensitive data out of chart metadata files
-- The `lookup()` function can be used to query previous values if needed, with appropriate security considerations
+### Making Available During `helm template`
 
-Documentation and warnings should be provided to guide chart authors in using this feature securely.
+**Idea:** Allow `.DeployedChart` to be populated during `helm template` by querying the cluster.
 
-## How to teach this
+**Rejection Reason:**
+- Violates the design principle that `helm template` should be cluster-agnostic
+- Would make template rendering non-deterministic
+- Could cause security issues if templating in one environment with data from another
+- A future mock/plugin system is a better solution for testing
 
-Documentation should be updated to include:
+### Different Naming Conventions
 
-- An explanation of the new `.DeployedChart` object and its purpose
-- Examples of how to use `.DeployedChart` in templates, including how it replaces common workarounds:
-	- **Breaking Change Migrations**: Templates can conditionally create both old and new resources (like Secrets or ConfigMaps) during upgrades by checking the deployed chart version, eliminating the need for pre-upgrade hooks that store version metadata in ConfigMaps or complex manual coordination steps
-	- **Conditional Migration Jobs**: One-time data migration Jobs can be created only when crossing specific version boundaries by comparing deployed and target versions, removing the requirement for post-renderers that query the cluster and inject migration resources
-	- **Version-Aware Defaults**: Charts can preserve legacy behavior for existing installations while adopting new defaults for fresh installs by checking if a deployed chart exists and comparing versions, replacing manual values file conventions where users must specify previous versions
-	- **Blue-Green Deployment Orchestration**: Advanced deployment strategies can be implemented based on version deltas (like major vs. minor upgrades) without requiring external orchestration tools or post-renderers
-- Guidance on security implications and best practices
-- Information about the opt-out flag and its usage
+**Ideas considered:**
+- `.PreviousChart` (ambiguous for rollbacks)
+- `.InstalledChart` (confusing with current install)
+- `.CurrentChart` (ambiguous which is "current")
+- `.Release.Deployed.Chart` (unnecessarily nested)
+- `.OldChart` (informal and ambiguous)
 
-## Reference implementation
+**Rejection Reason:** `.DeployedChart` is the clearest and most consistent with Helm terminology.
 
-This section will link to the reference implementation once available.
+### Exposing Only Version Strings
 
-## Rejected ideas
+**Idea:** Only expose `.DeployedVersion` and `.DeployedAppVersion` as simple strings instead of the full chart object.
 
-The following ideas were considered but not pursued:
+**Rejection Reason:**
+- Inconsistent with `.Chart` object structure
+- Prevents access to other useful metadata (type, deprecated status, annotations)
+- Would need to be expanded later anyway if more fields are needed
+- Simpler to reuse existing Chart metadata structure
 
-- Exposing the full release object (`.DeployedRelease`) instead of just chart metadata
-- Making `.DeployedChart` available during `helm install` or `helm template`
-- Using a different naming convention for the object
+### Environment Variable or Config File
 
-## Open issues
+**Idea:** Control the feature via environment variable or Helm configuration file instead of CLI flag.
 
-- None at this time.
+**Rejection Reason:**
+- Less explicit than a CLI flag
+- Harder to see in scripts and documentation
+- Doesn't follow Helm's pattern of operation-specific flags
+- Could cause confusion if set globally but not desired for specific operations
+
+## Open Issues
+
+None at this time. This HIP is ready for community review and feedback.
+
+## References
+
+- [Helm Built-in Objects Documentation](https://helm.sh/docs/chart_template_guide/builtin_objects/)
+- [Helm Template Functions and Pipelines](https://helm.sh/docs/chart_template_guide/functions_and_pipelines/)
+- [Go Template Documentation](https://pkg.go.dev/text/template)
+- [Semantic Versioning 2.0.0](https://semver.org/)
